[tool.poetry]
name = "tracker.rhizome.dev"
version = "0.1.0"
description = ""
authors = ["Brian Li <brian@brianli.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.78.0"
beanie = "^1.11.0"
Jinja2 = "^3.1.2"
iconsdk = "^2.1.0"
httpx = "^0.23.0"
python-dotenv = "^0.20.0"
rich = "^12.4.4"
numerize = "^0.12"
pydantic = "^1.9.1"
gunicorn = "^20.1.0"
python-multipart = "^0.0.5"
dnspython = "^2.2.1"
numpy = "^1.22.4"
cachetools = "^5.2.0"
aioredis = "^2.0.1"
redis = "^4.3.4"
fastapi-cache2 = "^0.1.8"
pandas = "^1.4.3"
timeago = "^1.0.15"
uvicorn = {extras = ["standard"], version = "^0.19.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
